# scr

./: .gitignore  ARCHITECTURE_V0.md  README.md  README_IT.md  SCR_POC_REQUIREMENTS.md  THEORY.md  THEORY_IT.md  pyproject.toml
.context/: ADR_0001_FIELD_BASED_COMPETENCE_RUNTIME.md  README.md  SCR_CODEX_IMPLEMENTATION_PACK.md  analysis_snapshot.md  deep-research-report.md  operational-plan.md  phase-abc-strict-validation.md  phase-c-validation.md  project_state.md
.scr/: benchmarks.7z
.scr/benchmarks/run_20260428_220157_081389/: task_001.json
.scr/benchmarks/run_20260428_220440_089669/: task_001.json
.scr/benchmarks/run_20260428_221604_909109/: task_001.json
.scr/benchmarks/run_20260428_221952_563495/: task_001.json
.scr/benchmarks/run_20260428_222553_979440/: task_001.json
.scr/benchmarks/run_20260428_223059_654757/: task_001.json
src/scr/: __init__.py  application_benchmark.py  baseline.py  benchmark.py  delta.py  field.py  learning.py  replay.py  runtime.py
tasks/task_001/: application_thread.json  bug.py  meta.txt  reference_model_result.json  test_bug.py
tasks/task_multi_branch_logic/: bug.py  meta.txt  test_bug.py
tasks/task_network_retry_logic/: bug.py  meta.txt  test_bug.py
tasks/task_stateful_computation/: bug.py  meta.txt  test_bug.py
tests/: test_application_thread_benchmark.py  test_benchmark.py  test_competition.py  test_consolidation.py  test_divergence.py  test_input_structuring.py  test_learning.py  test_replay.py  test_replay_loader_validator.py  test_runtime_activation_policy.py  test_standardization.py  test_validation.py
(+10 files in other folders)
